<resources>
    <string name="app_name">PressureNote</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="delimiter">/</string>
    <string name="text_alert_dialog_title">Введите новые показания</string>
    <string name="upper_pressure">Верхнее давление</string>
    <string name="lower_pressure">Нижнее давление</string>
    <string name="heart_rate">Частота сердцебиения</string>
    <string name="add_indication">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="tv_empty_health_list_text">Нет данных о давлении. \n\nДобавьте новые данные о давлении</string>
</resources>