<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAlertDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/offset_8"
        android:padding="@dimen/offset_16"
        android:text="@string/text_alert_dialog_title"
        android:textAlignment="center"
        android:textSize="@dimen/offset_20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUpperInputLayoutAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_8"
        android:hint="@string/upper_pressure"
        app:counterMaxLength="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUpperInputEditAlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLowerInputLayoutAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_8"
        android:hint="@string/lower_pressure"
        app:counterMaxLength="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLowerInputEditAlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textHeartRateInputLayoutAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offset_8"
        android:hint="@string/heart_rate"
        app:counterMaxLength="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textHeartRateInputEditAlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_8"
        android:gravity="center">

        <Button
            android:id="@+id/btnAddIndication"
            android:layout_width="@dimen/btn_alert_dialog_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/offset_8"
            android:text="@string/add_indication" />

        <Button
            android:id="@+id/btnCancelIndication"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/offset_8"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>